--- a/src/style.css
+++ b/src/style.css
@@ -3,6 +3,12 @@
     box-sizing: border-box;
 }
 
+body{
+    background-color: #898989;
+}
+
+
+/* Tictactoe table */
 table {
     border-collapse: collapse;
 }
