--- a/src/style.css
+++ b/src/style.css
@@ -87,3 +87,26 @@ tr td:last-child {
 .inactivePlayer {
     opacity: 0.5;
 }
+
+
+/* FINISH LINE */
+.horizontalLine {
+    height: 10px;
+    background-color: rgba(255, 0, 0, 0.363);
+    width: 350px;
+    position: absolute;
+    z-index: 1;
+    transform: scaleX(0.0);
+    transition: transform 225ms ease-in-out;
+}
+
+.makeVertical {
+    transform: rotate(90deg);
+    transform: scaleX(0.0);
+    transition: transform 225ms ease-in-out;
+}
+
+.makeDiagonal {
+    transition: transform 225ms ease-in-out;
+    width: 450px;
+}
