--- a/src/style.css
+++ b/src/style.css
@@ -110,3 +110,24 @@ tr td:last-child {
     transition: transform 225ms ease-in-out;
     width: 450px;
 }
+
+.gameOver {
+    position: absolute;
+    left: 0;
+    right: 0;
+    width: 100%;
+    z-index: 2;
+    animation: zoomIn 225ms ease-in-out;
+}
+
+@keyframes zoomIn {
+    from{
+        opacity: 0;
+        transform: scale(0);
+    }
+
+    to{
+        opacity: 1;
+        transform: scale(1);
+    }
+}
