--- a/src/style.css
+++ b/src/style.css
@@ -4,7 +4,7 @@
 }
 
 body{
-    background-color: #898989;
+    background-color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -36,7 +36,7 @@ td {
 }
 
 td:hover {
-    background-color: rgba(245, 152, 12, 0.363);
+    background-color: rgba(250, 204, 1, 0.363);
 }
 
 tr:first-child  td {
@@ -95,7 +95,7 @@ tr td:last-child {
 /* FINISH LINE */
 .horizontalLine {
     height: 10px;
-    background-color: rgba(255, 0, 0, 0.363);
+    background-color: rgba(25, 0, 255, 0.363);
     width: 350px;
     position: absolute;
     z-index: 1;
